--- a/style.css
+++ b/style.css
@@ -176,12 +176,63 @@ button {
 
 .professionals {
   display: flex;
+  align-items: center;
+  gap: 104px;
+  margin-bottom: 101px;
+
+  .cont {
+    font-weight: 500;
+    font-size: 16px;
+    color: #544837;
+  }
+
+  h2 {
+    color: #2f281e;
+    font-weight: 700;
+    font-size: 36px;
+    margin-bottom: 22px;
+    margin-top: 3px;
+  }
+  p {
+    color: #544837;
+    font-weight: 500;
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+
+  h3 {
+    color: #2f281e;
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 12px;
+    margin-top: 25px;
+  }
 }
 
 .managers {
   display: flex;
+  gap: 100px;
+  margin-bottom: 104px;
+  align-items: center;
 }
 
 .marketers {
   display: flex;
+  align-items: center;
+  gap: 82px;
+  margin-bottom: 146px;
+}
+
+.footer {
+  display: flex;
+  padding-top: 102px;
+  /* justify-content: space-evenly; */
+  align-items: baseline;
+  margin-bottom: 77px;
+  gap: 126px;
+
+  ul {
+    margin-bottom: 0;
+    padding-left: 0;
+  }
 }
